<resources>
    <string name="app_name" translatable="false">SofaMiniProject</string>
    <string name="title_football">Football</string>
    <string name="title_basketball">Basketball</string>
    <string name="title_american_football">Am. Football</string>
    <string name="no_data">No available matches on this day</string>
    <string name="events_num">%1$s Events</string>
    <string name="event_details">%1$s, %2$s, %3$s, Round %4$s</string>
    <string name="today">TODAY</string>

    <string name="leagues_title">Leagues</string>
    <string name="leagues" translatable="false">leagues</string>
    <string name="favorite" translatable="false">favorites</string>
    <string name="unfavorite" translatable="false">unfavorite</string>
    <string name="settings" translatable="false">settings</string>
    <string name="match_status_finished" translatable="false">Full Time</string>
    <string name="no_results_yet">No results yet.</string>
    <string name="view_tournament_details">View Tournament Details</string>

    <string name="team_info">Team info</string>
    <string name="tournaments">Tournaments</string>
    <string name="venue">Venue</string>
    <string name="next_match">Next match</string>
    <string name="stadium">Stadium</string>
    <string name="coach">Coach:</string>
    <string name="total_players">Total Players</string>
    <string name="foreign_players">Foreign Players</string>
    <string name="events">Events</string>
    <string name="full_time" translatable="false">FT</string>
    <string name="team">Team</string>
    <string name="plays" translatable="false">P</string>
    <string name="wins" translatable="false">W</string>
    <string name="draws" translatable="false">D</string>
    <string name="losses" translatable="false">L</string>
    <string name="goals" translatable="false">Goals</string>
    <string name="points" translatable="false">PTS</string>
    <string name="coach_header">Coach</string>
    <string name="players_header">Players</string>
    <string name="matches_header">Matches</string>
    <string name="nationality">Nationality</string>
    <string name="position">Position</string>

    <string name="midfield">Midfield</string>
    <string name="defence">Defence</string>
    <string name="goalkeeper">Goalkeeper</string>
    <string name="forward">Forward</string>

    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="date_format">Date format</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="date_dd" translatable="false">DD / MM / YYYY</string>
    <string name="date_mm" translatable="false">MM / DD / YYYY</string>
    <string name="about">About</string>
    <string name="academy">Sofascore Android Academy</string>
    <string name="class_year">Class 2023</string>
    <string name="app_name_title">App name</string>
    <string name="api_credit_title">API Credit</string>
    <string name="api_credit_val" translatable="false">Sofascore</string>
    <string name="app_name_val" translatable="false">Mini Sofascore App</string>
    <string name="developer" translatable="false">Developer</string>
    <string name="developer_val" translatable="false">Nikola Pehnec</string>

    <string name="settings_title">Settings</string>
    <string name="search_hint">Players or teams</string>
    <string name="search">Search</string>
    <string name="recent_searches">Recent searches</string>
    <string name="favorites">Favorites</string>
    <string name="player">Player</string>
    <string name="scores_against_for" translatable="false">%1$s:%2$s</string>

    <string-array name="tabs">
        <item>Football</item>
        <item>Basketball</item>
        <item>Am.Football</item>
    </string-array>

    <string-array name="tabs_detail_page">
        <item>Details</item>
        <item>Matches</item>
        <item>Standings</item>
        <item>Squad</item>
    </string-array>

    <string-array name="tabs_tournament_detail_page">
        <item>Matches</item>
        <item>Standings</item>
    </string-array>

    <string-array name="languages">
        <item>English</item>
        <item>Croatian</item>
    </string-array>

</resources>