<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/leagues"
        app:showAsAction="always" />

    <item
        android:id="@+id/leagues"
        android:icon="@drawable/tournament_icon"
        android:title="@string/leagues"
        app:showAsAction="always" />

    <item
        android:id="@+id/favorite"
        android:icon="@drawable/ic_baseline_star_24"
        android:title="@string/favorite"
        app:showAsAction="always" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/settings_icon"
        android:title="@string/settings"
        app:showAsAction="always" />

</menu>