<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/surface_surface_0"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/surface_surface_1"
        android:paddingVertical="16dp">

        <TextView
            android:id="@+id/position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:text="#"
            android:textColor="@color/on_surface_on_surface_lv_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/team_name"
            style="@style/Tabular"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:text="@string/team"
            android:textColor="@color/on_surface_on_surface_lv_2"
            app:layout_constraintBottom_toBottomOf="@+id/position"
            app:layout_constraintStart_toEndOf="@id/position"
            app:layout_constraintTop_toTopOf="@+id/position" />

        <TextView
            android:id="@+id/plays"
            style="@style/Tabular"
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/plays"
            android:textAlignment="center"
            android:textColor="@color/on_surface_on_surface_lv_2"
            app:layout_constraintEnd_toStartOf="@+id/wins"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@+id/team_name"
            app:layout_constraintTop_toTopOf="@id/team_name" />

        <TextView
            android:id="@+id/wins"
            style="@style/Tabular"
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/wins"
            android:textAlignment="center"
            android:textColor="@color/on_surface_on_surface_lv_2"
            app:layout_constraintEnd_toStartOf="@+id/draws"
            app:layout_constraintTop_toTopOf="@id/team_name" />

        <TextView
            android:id="@+id/draws"
            style="@style/Tabular"
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/draws"
            android:textAlignment="center"
            android:textColor="@color/on_surface_on_surface_lv_2"
            app:layout_constraintEnd_toStartOf="@+id/losses"
            app:layout_constraintTop_toTopOf="@id/team_name" />

        <TextView
            android:id="@+id/losses"
            style="@style/Tabular"
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/losses"
            android:textAlignment="center"
            android:textColor="@color/on_surface_on_surface_lv_2"
            app:layout_constraintEnd_toStartOf="@+id/goals"
            app:layout_constraintTop_toTopOf="@id/team_name" />

        <TextView
            android:id="@+id/goals"
            style="@style/Tabular"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/goals"
            android:textAlignment="center"
            android:textColor="@color/on_surface_on_surface_lv_2"
            app:layout_constraintEnd_toStartOf="@+id/pts"
            app:layout_constraintTop_toTopOf="@id/team_name" />

        <TextView
            android:id="@+id/pts"
            style="@style/Tabular"
            android:layout_width="26dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/points"
            android:textAlignment="center"
            android:textColor="@color/on_surface_on_surface_lv_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/team_name" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>