<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/surface_surface_1"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/team_info"
            style="@style/Headline2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="12dp"
            android:text="@string/team_info"
            android:textAlignment="center"
            android:textColor="@color/on_surface_on_surface_lv_1"
            app:layout_constraintBottom_toTopOf="@+id/coach_row"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@+id/coach_row"
            layout="@layout/coach_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/team_info" />

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/on_surface_on_surface_lv_4"
            app:layout_constraintTop_toBottomOf="@id/coach_row" />

        <include
            android:id="@+id/total_players"
            layout="@layout/total_players_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/foreign_players"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/separator" />

        <include
            android:id="@+id/foreign_players"
            layout="@layout/foreign_players_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/total_players"
            app:layout_constraintTop_toBottomOf="@id/separator" />

        <View
            android:id="@+id/separator2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/on_surface_on_surface_lv_4"
            app:layout_constraintTop_toBottomOf="@id/total_players" />

        <TextView
            android:id="@+id/team_tournaments"
            style="@style/Headline2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="12dp"
            android:text="@string/tournaments"
            android:textAlignment="center"
            android:textColor="@color/on_surface_on_surface_lv_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/separator2" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tournaments_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/team_tournaments" />

        <View
            android:id="@+id/separator3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/on_surface_on_surface_lv_4"
            app:layout_constraintTop_toBottomOf="@id/tournaments_rv" />

        <TextView
            android:id="@+id/team_venue"
            style="@style/Headline2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="12dp"
            android:text="@string/venue"
            android:textAlignment="center"
            android:textColor="@color/on_surface_on_surface_lv_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/separator3" />

        <TextView
            android:id="@+id/venue_label"
            style="@style/Body"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:text="@string/stadium"
            android:textColor="@color/on_surface_on_surface_lv_1"
            app:layout_constraintEnd_toStartOf="@id/venue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/team_venue" />

        <TextView
            android:id="@+id/venue"
            style="@style/Body"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:textAlignment="textEnd"
            android:textColor="@color/on_surface_on_surface_lv_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/venue_label"
            app:layout_constraintTop_toBottomOf="@id/team_venue"
            tools:text="@string/stadium" />

        <View
            android:id="@+id/separator4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/on_surface_on_surface_lv_4"
            app:layout_constraintTop_toBottomOf="@id/venue_label" />

        <TextView
            android:id="@+id/team_next_match"
            style="@style/Headline2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="12dp"
            android:text="@string/next_match"
            android:textAlignment="center"
            android:textColor="@color/on_surface_on_surface_lv_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/separator4" />

        <com.sofaacademy.sofaminiproject.views.customviews.TournamentView
            android:id="@+id/next_match_tournament"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:paddingVertical="8dp"
            app:layout_constraintTop_toBottomOf="@id/team_next_match" />

        <com.sofaacademy.sofaminiproject.views.customviews.MatchView
            android:id="@+id/next_match_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:layout_constraintTop_toBottomOf="@id/next_match_tournament" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>